# Undoable-Battle

./: .gitignore  CMakeLists.txt  Dev Checklist  LICENSE  Notes  README.md  main.cpp  movemanager.cpp  movemanager.h  runner.cpp  runner.h
ActorTypeCreate/: actor.cpp  actor.h
ActorTypes/: ghost.cpp  ghost.h  knight.cpp  knight.h  warrior.cpp  warrior.h
CreationFactories/: actorfactory.cpp  actorfactory.h  battlemovefactory.cpp  battlemovefactory.h
GameManagement/: Enums.h  movemanager.cpp  movemanager.h  stack.cpp  stack.h
MoveTypeCreate/: battlemove.cpp  battlemove.h  imove.cpp  imove.h
MoveTypes/: attackone.cpp  attackone.h  attackttwo.cpp  attackttwo.h  attacktwo.cpp  attacktwo.h  heal.cpp  heal.h
